# the-company-os

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .replit  .rules-service.yaml  BUILD  BUILD.bazel  DEVELOPER_WORKFLOW.md  DEVELOPMENT_TEST_PLAN.md  DEVELOPMENT_WORKFLOW_UPDATE_SUMMARY.md  LLM-CONTEXT.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  brand.charter.md  build.py  commit-message.txt  company-os.charter.md  knowledge-architecture.charter.md  knowledge-system.rules.md  migration-guide.md  milestone-2-test-failing-analysis.md  repository-architecture.charter.md  repository-system.rules.md  requirements.in  requirements.txt  requirements_lock.txt  service-architecture.charter.md  service-system.rules.md  synapse.methodology.md  test-final-validation.md  test-validation.md  verify-all.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
company_os/: README.md  __init__.py
company_os/domains/: README.md  __init__.py
company_os/domains/charters/: README.md
company_os/domains/charters/data/: agent-role-job-architecture.charter.md  apn.charter.md  brand.charter.md  company-os.charter.md  enterprise-grade-security-and-infrastructure.charter.md  knowledge-architecture.charter.md  maintenance-service.charter.md  repo-guardian.charter.md  repository-architecture.charter.md  rules-service.charter.md  service-architecture.charter.md
company_os/domains/paradigms/: README.md
company_os/domains/paradigms/data/: paradigm-template.md  system-archetypes.paradigm.md
company_os/domains/principles/: README.md
company_os/domains/principles/data/: dual-flow.principle.md  principle-template.md
company_os/domains/processes/: README.md
company_os/domains/processes/data/: developer-verification.process.md  markdown-validation-patterns.reference.md  markdown-validation.workflow.md
company_os/domains/registry/data/: services.registry.md
company_os/domains/rules/: README.md
company_os/domains/rules/data/: brief-system.rules.md  code-factorization.rules.md  knowledge-system.rules.md  repository-system.rules.md  signal-system.rules.md  tech-stack.rules.md  validation-system.rules.md
company_os/domains/rules_service/: BUILD.bazel  ISSUES_AND_FIXES.md  NEXT_STEPS.md  __init__.py
company_os/domains/rules_service/adapters/cli/: BUILD.bazel  __main__.py
company_os/domains/rules_service/adapters/cli/commands/: __init__.py  rules.py  validate.py
company_os/domains/rules_service/adapters/pre_commit/: .pre-commit-hooks.yaml  BUILD.bazel  direct_hooks.py  hooks.py  hooks_improved.py  hooks_proper.py  sync_direct.py  sync_hook.py  validate_direct.py  validate_hook.py
company_os/domains/rules_service/data/: rules-service.config.yaml
company_os/domains/rules_service/docs/: README.md  python-imports-migration.md  sync-engine.md
company_os/domains/rules_service/src/: BUILD.bazel  config.py  discovery.py  models.py  sync.py  validation.py
company_os/domains/rules_service/tests/: BUILD.bazel  test_cli.py  test_cli_integration.py  test_cli_performance.py  test_config.py  test_integration.py  test_performance.py  test_performance_benchmarks.py  test_pre_commit.py  test_sync.py  test_validation.py  test_validation_human_input.py
company_os/domains/source_truth_enforcement/: BUILD.bazel  README.md  __init__.py
company_os/domains/source_truth_enforcement/adapters/: __init__.py
company_os/domains/source_truth_enforcement/adapters/cli/: BUILD.bazel  __init__.py  source_truth_cli.py
company_os/domains/source_truth_enforcement/data/: BUILD.bazel  source_truth_registry.yaml
company_os/domains/source_truth_enforcement/src/: BUILD.bazel  __init__.py  checker.py  ignore_parser.py  models.py  registry.py
company_os/domains/workflows/: README.md
company_os/domains/workflows/data/: agent-initialization.workflow.md  charter-stewardship.workflow.md  document-standardization.workflow.md  markdown-validation.workflow.md
company_os/domains/workflows/docs/: .gitkeep
docs/: README.md
docs/developers/: contributing.md
docs/users/: getting-started.md
infrastructure/: README.md
infrastructure/docs/: migration-guide.md
methodologies/: synapse.methodology.md
os/: README.md
os/domains/: __init__.py
os/domains/charters/data/: company-os.charter.md  evolution-architecture.charter.md  knowledge-architecture.charter.md  maintenance-service.charter.md  repository-architecture.charter.md  rules-service.charter.md
os/domains/knowledge/docs/: knowledge-system.rules.md
os/domains/processes/data/: markdown-validation-patterns.reference.md  markdown-validation.workflow.md  synapse.methodology.md
os/domains/registry/data/: services.registry.md
os/domains/rules/: README.md
os/domains/rules/data/: brief-system.rules.md  decision-system.rules.md  (+6 more)
os/domains/rules_service/: README.md
os/domains/rules_service/src/: BUILD.bazel  config.py  discovery.py  models.py  sync.py  validation.py
os/domains/rules_service/tests/: BUILD.bazel  test_config.py  test_integration.py  test_performance.py  test_sync.py  test_validation.py  test_validation_human_input.py
shared/: README.md
shared/libraries/: __init__.py
shared/libraries/company_os_core/: BUILD.bazel  models.py
src/company_os/services/repo_guardian/: BUILD.bazel  README.md  config.py  constants.py  docker-compose.yml  evolution.log.md  minimal_workflow.py  test_incremental_worker.py  test_incremental_workflow.py  test_minimal_worker.py  test_simple_workflow.py  test_workflow.py  test_workflow_imports.py  worker_main.py
src/company_os/services/repo_guardian/activities/: README.md  analysis.py  llm.py  repository.py
src/company_os/services/repo_guardian/adapters/: README.md  github.py
src/company_os/services/repo_guardian/models/: README.md  domain.py
src/company_os/services/repo_guardian/utils/: logging.py
src/company_os/services/repo_guardian/workflows/: README.md  guardian.py
tests/: test_base_document.py  test_rule_discovery.py  test_rule_discovery_edge_cases.py
work/: README.md
work/domains/decisions/: README.md
work/domains/projects/: README.md
(+91 files in other folders)
