load("@rules_python//python:defs.bzl", "py_library")

# Aggregate all rules_service components
py_library(
    name = "rules_service",
    srcs = glob(["src/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//shared/libraries/company_os_core",
        "@pip_dependencies//:pydantic",
        "@pip_dependencies//:pyyaml",
        "@pip_dependencies//:ruamel_yaml",
        "@pip_dependencies//:mistune",
    ],
)