load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "rules_service_lib",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//shared/libraries/company_os_core",
        "@pip_dependencies//:pydantic",
        "@pip_dependencies//:pyyaml",
        "@pip_dependencies//:ruamel_yaml",
        "@pip_dependencies//:mistune",
    ],
)
