load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "rules_service_lib",
    srcs = glob(["*.py"]),
    imports = ["../../../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//shared/libraries/company_os_core",
        "@pypi//pydantic",
        "@pypi//pyyaml",
        "@pypi//mistune",
        "@pypi//rich",
        "@pypi//typer",
        "@pypi//click",
        "@pypi//markdown_it_py",
        "@pypi//mdurl",
        "@pypi//pygments",
        "@pypi//shellingham",
        "@pypi//typing_extensions",
        "@pypi//pydantic_core",
        "@pypi//annotated_types",
    ],
)
