load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_sync",
    srcs = ["test_sync.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
    ],
)

py_test(
    name = "test_config",
    srcs = ["test_config.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
        "@pypi//pyyaml",
    ],
)

py_test(
    name = "test_integration",
    srcs = ["test_integration.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
        "@pypi//pyyaml",
    ],
)

py_test(
    name = "test_performance",
    srcs = ["test_performance.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
    ],
    # Performance tests may need more time
    timeout = "moderate",
)

py_test(
    name = "test_validation",
    srcs = ["test_validation.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
        "@pypi//mistune",
    ],
)

py_test(
    name = "test_validation_human_input",
    srcs = ["test_validation_human_input.py"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//pytest",
        "@pypi//pydantic",
    ],
)

# Test suite that runs all tests
test_suite(
    name = "all_tests",
    tests = [
        ":test_sync",
        ":test_config",
        ":test_integration",
        ":test_performance",
        ":test_validation",
        ":test_validation_human_input",
    ],
)