load("@aspect_rules_py//py:defs.bzl", "py_test")

# Individual test targets
[
    py_test(
        name = test_file[:-3],  # Remove .py extension
        srcs = [test_file],
        deps = [
            "//company_os/domains/rules_service/src:rules_service_lib",
            "//company_os/domains/rules_service/adapters/cli:cli_lib",
            "@pypi//pytest",
            "@pypi//pytest_bazel",
            "@pypi//pytest_benchmark",
            "@pypi//typer",
        ],
    )
    for test_file in glob(["test_*.py"])
]

# Test suite that groups all tests
test_suite(
    name = "all_tests",
    tests = [test_file[:-3] for test_file in glob(["test_*.py"])],
)
