load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_library(
    name = "cli_lib",
    srcs = glob(["**/*.py"]),
    imports = ["../../../.."],
    visibility = ["//company_os/domains/rules_service/tests:__pkg__"],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//typer",
        "@pypi//rich",
    ],
)

py_binary(
    name = "rules_cli",
    srcs = ["__main__.py"],
    main = "__main__.py",
    imports = ["../../../.."],
    deps = [
        ":cli_lib",
        "@pypi//typer",
        "@pypi//rich",
    ],
)
