load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")

py_library(
    name = "cli_lib",
    srcs = glob(["**/*.py"]),
    imports = ["../../../.."],
    visibility = [
        "//company_os/domains/rules_service/tests:__pkg__",
        "//company_os/domains/rules_service/adapters/pre_commit:__pkg__",
    ],
    deps = [
        "//company_os/domains/rules_service/src:rules_service_lib",
        "@pypi//typer",
        "@pypi//rich",
        "@pypi//click",
        "@pypi//markdown_it_py",
        "@pypi//mdurl",
        "@pypi//pygments",
        "@pypi//shellingham",
        "@pypi//typing_extensions",
        # Add explicit transitive dependencies
        "@pypi//pydantic",
        "@pypi//pydantic_core",
        "@pypi//annotated_types",
        "@pypi//pyyaml",
        "@pypi//mistune",
    ],
)

py_binary(
    name = "rules_cli",
    srcs = ["__main__.py"],
    main = "__main__.py",
    imports = ["../../../.."],
    deps = [
        ":cli_lib",
    ],
)
